--- a/Django Project/DBProject/templates/index.html
+++ b/Django Project/DBProject/templates/index.html
@@ -9,12 +9,13 @@
 <body bgcolor="lightblue">
     <center><h1>Welcome to Database Project</h1></center>
     <hr>
-    <form>
-        <input type="text" placeholder="Enter Name"><br><br>
-        <input type="email" placeholder="Enter Email"><br><br>
-        <input type="number" placeholder="Enter Mobile"><br><br>
-        <input type="date" placeholder="Enter DOB"><br><br>
-        <textarea placeholder="Address"></textarea><br><br>
+    <form method="post">
+        {% csrf_token %}
+        <input type="text" placeholder="Enter Name" name="name"><br><br>
+        <input type="email" placeholder="Enter Email" name="email"><br><br>
+        <input type="number" placeholder="Enter Mobile" name="mobile"><br><br>
+        <input type="date" placeholder="Enter DOB" name="dob"><br><br>
+        <textarea placeholder="Address" name="address"></textarea><br><br>
         <input type="submit" value="Save">
     </form>
 </body>
