--- a/Django Project/DBProject/templates/confirm.html
+++ b/Django Project/DBProject/templates/confirm.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirm</title>
 </head>
+
 <body bgcolor="gold">
-    <center><h1>Welcome, .....</h1></center>
+    <center>
+        <h1>Welcome, .....</h1>
+    </center>
     <hr>
+    <!-- {{data}} -->
+    <!-- {% for i in data %}
+    {{i.name}}
+    {{i.email}}
+    {{i.dob}}
+    {% endfor %} -->
+
+    <table border="2" align="center">
+        <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Email</th>
+            <th>DOB</th>
+            <th>Mobile</th>
+            <th>Address</th>
+            <th>Action</th>
+        </tr>
+        {% for i in data %}
+        <tr>
+            <td>{{i.id}}</td>
+            <td>{{i.name}}</td>
+            <td>{{i.email}}</td>
+            <td>{{i.dob}}</td>
+            <td>{{i.mobile}}</td>
+            <td>{{i.address}}</td>
+            <td><a href="/updatedata">Update</a>
+            <a href="/deletedata/{{i.id}}">Delete</a></td>
+        </tr>
+        {% endfor %}
+    </table>
+
 </body>
+
 </html>
