--- a/Django Project/DBProject/templates/updatedata.html
+++ b/Django Project/DBProject/templates/updatedata.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome | Index</title>
+    <title>Update Data</title>
 </head>
 <body bgcolor="lightblue">
-    <center><h1>Welcome to Database Project</h1></center>
+    <center><h1>Update User Details</h1></center>
     <hr>
     <form method="post">
         {% csrf_token %}
