--- a/Django Project/NotesApp/templates/notes.html
+++ b/Django Project/NotesApp/templates/notes.html
@@ -204,6 +204,34 @@
     </div>
     <!--Signup Modal End-->
 
+    <div class="container my-5">
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            <div class="form-floating mb-3">
+                <input type="text" name="title" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <label for="floatingInput">Query Title</label>
+            </div>
+            <select class="form-select form-select-lg mb-3" name="cate" aria-label=".form-select-lg example">
+                <option selected>Select any one...</option>
+                <option>Core Python</option>
+                <option>Python with Django</option>
+                <option>iOS Application</option>
+                <option>Android Application</option>
+                <option>PHP</option>
+                <option>Other</option>
+            </select>
+            <div>
+                <label for="formFileLg" class="form-label">Upload your docs/files</label>
+                <input class="form-control form-control-lg" name="myfiles" id="formFileLg" type="file">
+            </div>
+            <div class="mb-3 my-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Comments</label>
+                <textarea class="form-control" name="comments" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary btn-lg">Submit Notes</button>
+        </form>
+    </div>
+
 </body>
 
 </html>
