Add SocialAuth - Gmail

--- a/Django Project/NotesApp/templates/index.html
+++ b/Django Project/NotesApp/templates/index.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load account %}
+{% load socialaccount %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -140,7 +142,14 @@
                             <input type="checkbox" class="form-check-input" id="exampleCheck1">
                             <label class="form-check-label" for="exampleCheck1">Check me out</label>
                         </div>
-                        <button type="submit" name="login" value="login" class="btn btn-primary">Login</button>
+
+                        <div class="d-grid gap-2">
+                            <button type="submit" name="login" value="login" class="btn btn-primary">Login</button>
+                            <a class="btn btn-primary" href="">Login with Facebook</a>
+                            <a class="btn btn-danger" href="{% provider_login_url 'google' %}">Login with Gmail</a>
+                            <!-- <button class="btn btn-primary" type="button">Login with Facebook</button>
+                            <button class="btn btn-danger" type="button">Login with Gmail</button> -->
+                        </div>
                     </form>
                 </div>
                 <div class="modal-footer">
