--- a/Django Project/NotesApp/templates/profile.html
+++ b/Django Project/NotesApp/templates/profile.html
@@ -117,7 +117,7 @@
             <div class="col-md-3">
                 <label for="validationCustom04" class="form-label">State</label>
                 <select class="form-select" name="state" id="validationCustom04" required>
-                    <option selected disabled value="">{{cuser.state}}</option>
+                    <option>{{cuser.state}}</option>
                     <option>Gujarat</option>
                     <option>Delhi</option>
                     <option>Punjab</option>
