--- a/Django Project/NotesApp/templates/index.html
+++ b/Django Project/NotesApp/templates/index.html
@@ -145,7 +145,7 @@
 
                         <div class="d-grid gap-2">
                             <button type="submit" name="login" value="login" class="btn btn-primary">Login</button>
-                            <a class="btn btn-primary" href="">Login with Facebook</a>
+                            <a class="btn btn-primary" href="{% provider_login_url 'facebook' %}">Login with Facebook</a>
                             <a class="btn btn-danger" href="{% provider_login_url 'google' %}">Login with Gmail</a>
                             <!-- <button class="btn btn-primary" type="button">Login with Facebook</button>
                             <button class="btn btn-danger" type="button">Login with Gmail</button> -->
